@@ -22,6 +22,8 @@ Version 1.3.19+svn:
  * miscellaneous and bug fixes:
    * units with a death sound but no death animation now play their death
      sound correctly
+   * selection animations are not directional when standing animations are
+   disabled (bug #11151)
    * Fixed parser problems with \r\r in files
    * cleanups and a compiler fix based on patch #911
    * the detection of the savegame version was done after parsing the savegame
